--- a/index.html
+++ b/index.html
@@ -41,16 +41,11 @@
 							<h1 style = "text-align: center">Prajwal Srinivas</h1>
 							<p style = "text-align: center">Data Driven - Result Oriented - Analytical</p>
 
-							<p style = "text-align: center"> Experienced Business/Risk Analyst with a demonstrated history of working in the finance industry, and currently
-								pursuing a Master's degree focused on Data Analytics Engineering, from Northeastern University, Boston. With around 4 years of industry 
-								experience, I bring a cluster of technical, communication and management skills. Skilled in Business Analysis, Consulting, Model Risk, Stakeholder Management, Databases, Data Manipulation/Wrangling, 
-								descriptive/inferential statistical analysis, and concepts of ML. 
-								<br>
-								My peers describe me as a committed individual with proficient communication skills, capable of demonstrating professional skepticism, 
-								showing healthy curiosity and a proactive attitude in adverse situations. Looking forward to leading positions in the industry that offer sharp learning and
-								career-growth. Every challenge from data inception to data modelling to conveying actionable insights of a project excites me and 
-								urges me to reach the depth of the subject. I modestly try to learn new things and pickup new technologies, 
-								work with them to extend my understanding through implementation, and eventually improve upon my horizontal exposure, and vertical expertise.</p>
+							<p style = "text-align: center"> As an experienced Business/Risk Analyst, I have a proven track record of success in the finance industry. I am currently pursuing a Master's degree focused on Data Analytics Engineering from Northeastern University, Boston, which has provided me with cutting-edge skills and knowledge in the field. With nearly four years of industry experience, I possess a unique combination of technical, communication, and management skills that allow me to excel in my field.
+<br>
+My expertise lies in Business Analysis, Consulting, Model Risk, Stakeholder Management, Databases, Data Manipulation/Wrangling, descriptive/inferential statistical analysis, and concepts of ML. I am known among my peers as a committed individual with proficient communication skills, capable of demonstrating professional skepticism, healthy curiosity, and a proactive attitude in adverse situations.
+<br>
+My ultimate goal is to take on leadership roles in the industry that offer opportunities for sharp learning and career growth. I thrive on challenges and am excited to tackle every aspect of a project, from data inception to data modeling to conveying actionable insights. I am constantly seeking to expand my knowledge base and skillset, learning new things and picking up new technologies along the way. Through this approach, I aim to improve both my horizontal exposure and vertical expertise, becoming an even more valuable asset to any team or organization.</p>
 							<ul style = "text-align: center; list-style: none">
 								<li><a href="https://drive.google.com/file/d/1p4ZE0EPJ4WW4HRUtwTXqz-Nfi4sAgW3J/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
@@ -74,15 +69,15 @@
 									<h4>Analyst of Decision Sciences</h4>
 		  						Sep 2020 - Aug 2022<br><br>
 
-									<p>Modelled and risk assessed financial crime risk model’s compliance; ensured governance for 80+ models, resulting in
-a 31% increase in model lift.</p>
-									<p>Validated and Optimized rule-based/statistical/ML models using Python, SQL, and Excel, resulting in an overall 7%
-reduction in SARs filed and 9% increase in SAR conversion rate.</p>
-									<p>Reduced model drift triggers by 18% and increased monitoring coverage by 14% through robust back-testing and 
-monitoring on Collibra and Power BI dashboards.</p>
-									<p>Managed cross-functional collaboration among stakeholders and developers from 55+ countries, resulting in 93% 
-compliance with model governance.</p>
+									<p>Assessed model risk and governance for 80+ financial crime risk (FCR) models, in line with the model risk policy/standards.</p>
+									<p>Validated and optimized FCR models using Python, SQL and Collibra, in line with risk regulations, resulting in 31% model lift.</p>
+									<p>Utilized effective model back-testing techniques like stress testing and benchmarking, to reduce model drift triggers by 18%.</p>
+									<p>Led the ideation of challenger models, resulting in a 14% increase in monitoring coverage and improved stability and performance.</p>
+									<p>Enhanced model transparency and reporting by 20% through PowerBI and JIRA dashboarding, facilitating better decision-making.</p>
 									<p>Implemented an efficient agile risk review framework reducing the governance TAT by an average of 36 hours per model.</p>
+									<p>Collaborated cross-functionally with developers, auditors, and regulators from over 55 countries to achieve a 16% reduction in 
+										audit findings and 95% model compliance score.</p>
+
 									<p>Awarded the ”Rising Star - 2021” in Global Analytics Center (GAC) - HSBC.</p>
 										
 								</div>
@@ -98,10 +93,8 @@ compliance with model governance.</p>
 									<h2>iNeuron.ai</h2>
 									<h4>Data Analyst Intern</h4>
 		  						Apr 2020 - Jul 2020<br><br>
-									<p>Built diverse data visualizations in Tableau while integrating scalable data sources, providing remarkable insights and increasing
-overall user engagement by 40%.</p>
-									<p>Developed 4 fully functional web applications using Django and Flask; Deployed the model and the web app on Heroku with
-93% satisfaction ratings from product owners.</p>
+									<p>Developed and deployed 4 web apps with Django/Flask on Heroku, achieving a 93% product owner satisfaction rating.</p>
+									<p>Increased user engagement by 18% through the creation of PowerBI visualizations that integrated with scalable data sources.</p>
 									</div>
 							</div>
 						</section>
@@ -118,7 +111,7 @@ overall user engagement by 40%.</p>
 increasing system reliability by 15% (MTTR) and increasing MTBF time by 35%.</p>
 									<p>Leveraged Tableau to analyze engine metric KPI data sets, providing process visibility and project planning, enabling key decisions
 as an interim SCRUM Master (team of 4).</p>
-									<p>Constructed automated MI reporting tool with Python and VBA; resulting in 150+ annual man-hours savings.</p>
+									<p>Reduced overall testing time by 66% with automation of regression tests using Python.</p>
 								</div>
 							</div>
 						</section>
@@ -176,7 +169,7 @@ as an interim SCRUM Master (team of 4).</p>
 								</section>
 								<section>
 									<i class="fa fa-database"></i>
-									<h3>FoodPro - Database System and Analytics for an online food delivery application</h3>
+									<h3>Feeding Your Business - FoodPro's Database/BI Solution</h3>
 									<p>Created a robust scalable database system - leveraging MySQL and MongoDB for efficient data operations; implemented data validation, normalization and security measures to ensure data integrity and confidentiality. Analyzed real-time data (transactional and reference) with Python, SQl and NoSQL to suggest A/B testing marketing campaigns. Increased customer repeat rate by 28%; recommended subscription marketing strategies.</p>
 									<ul class="actions">
 										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/FoodPro---Online-Food-Delivery-Database-Management-System-and-Analytics">Learn More</a></button>
@@ -193,7 +186,7 @@ as an interim SCRUM Master (team of 4).</p>
 								</section>
 								<section>
 								<i class="fa fa-plane"></i>
-									<h3>Domestic Flights Price Predictor</h3>
+									<h3>Smart Flights - Predicting Domestic Flight Fares</h3>
 									<p>Hypertuned ensemble model (Random Forest) with cross validation (Grid Search) on Root Mean Squared Error (RMSE) and Mean Absolute Error (MAE) while achieving a final accuracy of over 85%. Set up a Flask web app to predict domestic flights prices in India.</p>								</p>
 									<ul class="actions">
 										<button type = "button" style="font-size:8px"><a href="https://github.com/prajwalk7/Domestic-Flights-Price-Predictor">Learn More</a></button>
@@ -215,7 +208,7 @@ match parameters, also deployed on Heroku as a web app.
 								</section>
 								<section>
 									<i class="fa fa-home"></i>
-									<h3>Bengaluru House Prices Prediction</h3>
+									<h3>Know Before You Buy - Bengaluru House Price Predictor</h3>
 									<p>Achieved 87% accuracy with linear regression for predicting house prices in Bengaluru, India (over 13000 data points). Deployed
 the best model on webapp (Flask, HTML/CSS) hosted on Heroku.</p>
 									<ul class="actions">
