--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ My ultimate goal is to take on leadership roles in the industry that offer oppor
 							<div class="content">
 								<div class="inner">
 									<h2>iNeuron.ai</h2>
-									<h4>Data Analyst Intern</h4>
+									<h4>Data Scientist Intern</h4>
 		  						Apr 2020 - Jul 2020<br><br>
 									<p>Developed and deployed 4 web apps with Django/Flask on Heroku, achieving a 93% product owner satisfaction rating.</p>
 									<p>Increased user engagement by 18% through the creation of PowerBI visualizations that integrated with scalable data sources.</p>
