--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@ My ultimate goal is to take on leadership roles in the industry that offer oppor
 									<h4>Analyst of Decision Sciences</h4>
 		  						Sep 2020 - Aug 2022<br><br>
 
-									<p>Assessed model risk and governance for 80+ financial crime risk (FCR) models, in line with the model risk policy/standards.</p>
-									<p>Validated and optimized FCR models using Python, SQL and Collibra, in line with risk regulations, resulting in 31% model lift.</p>
-									<p>Utilized effective model back-testing techniques like stress testing and benchmarking, to reduce model drift triggers by 18%.</p>
-									<p>Led the ideation of challenger models, resulting in a 14% increase in monitoring coverage and improved stability and performance.</p>
+									<p>Assessed model risk and governance for 80+ financial crime risk models in line with model risk policy/standards
+(GMRP/GMRS, MCS); achieving 16% reduction in audit findings.</p>
+									<p>Optimized FCR models using Python, SQL, and Collibra to achieve 31% increase in model lift, and 14% increase in 
+monitoring coverage, by leading the ideation of champion models.</p>
+									<p>Reduced model drift triggers by 25% by implementing robust back-testing techniques and data governance procedures.</p>
+									<p>Defined KPIs for clustering, regression, anomaly detection models, aiding business-driven decisions.</p>
 									<p>Enhanced model transparency and reporting by 20% through PowerBI and JIRA dashboarding, facilitating better decision-making.</p>
 									<p>Implemented an efficient agile risk review framework reducing the governance TAT by an average of 36 hours per model.</p>
-									<p>Collaborated cross-functionally with developers, auditors, and regulators from over 55 countries to achieve a 16% reduction in 
-										audit findings and 95% model compliance score.</p>
+									<p>Managed cross-functional collaboration among stakeholders and developers from over 55 countries, while delivering 93% 
+compliance with model governance and development protocols.</p>
 
 									<p>Awarded the ”Rising Star - 2021” in Global Analytics Center (GAC) - HSBC.</p>
 										
