--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 							<h1 style = "text-align: center">Prajwal Srinivas</h1>
 							<p style = "text-align: center">Data Driven - Result Oriented - Analytical</p>
 
-							<p style = "text-align: center"> As an experienced Business/Risk Analyst, I have a proven track record of success in the finance industry. I am currently pursuing a Master's degree focused on Data Analytics Engineering from Northeastern University, Boston, which has provided me with cutting-edge skills and knowledge in the field. With nearly four years of industry experience, I possess a unique combination of technical, communication, and management skills that allow me to excel in my field.
-<br>
-My expertise lies in Business Analysis, Consulting, Model Risk, Stakeholder Management, Databases, Data Manipulation/Wrangling, descriptive/inferential statistical analysis, and concepts of ML. I am known among my peers as a committed individual with proficient communication skills, capable of demonstrating professional skepticism, healthy curiosity, and a proactive attitude in adverse situations.
-<br>
-My ultimate goal is to take on leadership roles in the industry that offer opportunities for sharp learning and career growth. I thrive on challenges and am excited to tackle every aspect of a project, from data inception to data modeling to conveying actionable insights. I am constantly seeking to expand my knowledge base and skillset, learning new things and picking up new technologies along the way. Through this approach, I aim to improve both my horizontal exposure and vertical expertise, becoming an even more valuable asset to any team or organization.</p>
-							<ul style = "text-align: center; list-style: none">
+							<p style = "text-align: center"> Welcome to the captivating world of data-driven wizardry and strategic brilliance! As an experienced Business/Risk Analyst, I excel at deciphering finance's mysteries. Currently pursuing a Master's degree in Data Analytics Engineering at Northeastern University, Boston, I combine cutting-edge skills with a thirst for knowledge.
+
+I'm not your average analyst—I possess a rare mix of technical sorcery, exceptional communication, and outstanding management. From handling stakeholders to mastering databases and wrangling data, I thrive in fast-paced arenas like business analysis, consulting, and model risk management. Peers admire my commitment, communication skills, skepticism, and proactive spirit.
+
+Yet, my ambitions go beyond the ordinary. I crave leadership roles with mind-boggling challenges and rapid career growth. I'm not just a number cruncher; I'm fully immersed in the data journey, from its birth to crafting remarkable models and revealing astonishing insights. My hunger for knowledge knows no bounds—I eagerly explore new technologies.
+
+Join me on this thrilling adventure as we reshape the business world, unlock hidden potentials, and forge intelligent, strategic decisions. Together, let's create a revolution and sprinkle some magic on the path to success.<ul style = "text-align: center; list-style: none">
 								<li><a href="https://drive.google.com/file/d/1p4ZE0EPJ4WW4HRUtwTXqz-Nfi4sAgW3J/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
