--- a/index.html
+++ b/index.html
@@ -41,13 +41,21 @@
 							<h1 style = "text-align: center">Prajwal Srinivas</h1>
 							<p style = "text-align: center">Data Driven - Result Oriented - Analytical</p>
 
-							<p style = "text-align: center"> Welcome to the captivating world of data-driven wizardry and strategic brilliance! As an experienced Business/Risk Analyst, I excel at deciphering finance's mysteries. Currently pursuing a Master's degree in Data Analytics Engineering at Northeastern University, Boston, I combine cutting-edge skills with a thirst for knowledge.
+							<p style = "text-align: center"> Welcome to the captivating world of data-driven wizardry! As an experienced Business/Risk Analyst, I excel at deciphering finance's mysteries. 
+								Pursuing a Master's in Data Analytics Engineering at Northeastern University, Boston, I combine cutting-edge skills with a thirst for knowledge. <br>
 
-I'm not your average analyst—I possess a rare mix of technical sorcery, exceptional communication, and outstanding management. From handling stakeholders to mastering databases and wrangling data, I thrive in fast-paced arenas like business analysis, consulting, and model risk management. Peers admire my commitment, communication skills, skepticism, and proactive spirit.
+I'm not your average analyst—I possess a rare blend of technical sorcery, exceptional communication, and outstanding management. 
+								From stakeholders to databases, I thrive in fast-paced arenas like business analysis and consulting. 
+								Peers admire my commitment, skepticism, and proactive spirit. Beyond crunching numbers, 
+								I'm fully immersed in the data journey, crafting remarkable models and revealing astonishing insights. 
+								My hunger for knowledge knows no bounds as I eagerly explore new technologies. <br>
 
-Yet, my ambitions go beyond the ordinary. I crave leadership roles with mind-boggling challenges and rapid career growth. I'm not just a number cruncher; I'm fully immersed in the data journey, from its birth to crafting remarkable models and revealing astonishing insights. My hunger for knowledge knows no bounds—I eagerly explore new technologies.
 
-Join me on this thrilling adventure as we reshape the business world, unlock hidden potentials, and forge intelligent, strategic decisions. Together, let's create a revolution and sprinkle some magic on the path to success.<ul style = "text-align: center; list-style: none">
+
+
+
+Join me on this thrilling adventure as we reshape the business world, unlock hidden potentials, and forge intelligent, strategic decisions. 
+								Together, let's create a revolution and sprinkle some magic on the path to success.<ul style = "text-align: center; list-style: none">
 								<li><a href="https://drive.google.com/file/d/1p4ZE0EPJ4WW4HRUtwTXqz-Nfi4sAgW3J/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
