--- a/index.html
+++ b/index.html
@@ -44,13 +44,9 @@
 							<p style = "text-align: center"> Welcome to the captivating world of data-driven wizardry! As an experienced Business/Risk Analyst, I excel at deciphering finance's mysteries. 
 								Pursuing a Master's in Data Analytics Engineering at Northeastern University, Boston, I combine cutting-edge skills with a thirst for knowledge. <br>
 
-I'm not your average analyst—I possess a rare blend of technical sorcery, exceptional communication, and outstanding management. 
-								From stakeholders to databases, I thrive in fast-paced arenas like business analysis and consulting. 
-								Peers admire my commitment, skepticism, and proactive spirit. Beyond crunching numbers, 
-								I'm fully immersed in the data journey, crafting remarkable models and revealing astonishing insights. 
-								My hunger for knowledge knows no bounds as I eagerly explore new technologies. <br>
-
-
+I possess a rare blend of technical sorcery, exceptional communication, and outstanding management valour. Thriving in fast-paced arenas, I excel in business analysis and consulting. 
+								Peers admire my commitment, skepticism, and proactive spirit. Fully immersed in the data journey, 
+								I craft remarkable models, reveal insights, and eagerly explore new technologies. <br>
 
 
 
