--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ the best model on webapp (Flask, HTML/CSS) hosted on Heroku.</p>
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li> Copyright &copy; 2023 Prajwal Srinivas.</li>
+						<li> Fin :) </li>
 				</div>
 			</footer>
 
