--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1 style = "text-align: center">Prajwal Srinivas</h1><br>
-							<p style = "text-align: center">Data Driven - Result Oriented - Analytical <br>
-				Welcome to the captivating world of data-driven wizardry! As an experienced Business/Risk Analyst, I excel at deciphering finance's mysteries. 
+							<h1 style = "text-align: center">Prajwal Srinivas <br>
+							<h6 style = "text-align: center">Data Driven - Result Oriented - Analytical</h6></h1>
+							
+				<p style = "text-align: center">Welcome to the captivating world of data-driven wizardry! As an experienced Business/Risk Analyst, I excel at deciphering finance's mysteries. 
 				Pursuing a Master's in Data Analytics Engineering at Northeastern University, Boston, I combine cutting-edge skills with a thirst for knowledge. <br>
 
 I possess a rare blend of technical sorcery, exceptional communication, and outstanding management valour. Thriving in fast-paced arenas, I excel in business analysis and consulting. 
