--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1 style = "text-align: center">Rachana Kallada Jayaraj <br>
+							<h1 style = "text-align: center">Rachana Kallada Jayaraj </h1>
 							
 				<p style = "text-align: center">My experience in technology includes more than four years of professional expertise in software engineering and cloud development. 
 				Currently pursuing a Master's in Computer Science at Northeastern University, Boston, I am constantly striving to improve my technical skills and knowledge in the field of Computer Science. <br>
