--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
 						<div class="inner">
 							<h1 style = "text-align: center">Rachana Kallada Jayaraj </h1>
 							
-				<p style = "text-align: center">My experience in technology includes more than four years of professional expertise in software engineering and cloud development. 
+				<p style = "text-align: center">My experience in technology includes five years of professional expertise in software engineering and cloud development. 
 				Currently pursuing a Master's in Computer Science at Northeastern University, Boston, I am constantly striving to improve my technical skills and knowledge in the field of Computer Science. <br>
 
-Join me on this thrilling adventure as we reshape the business world, unlock hidden potentials, and forge intelligent, strategic decisions. 
-				Together, let's create a revolution and sprinkle some magic on the path to success.<ul style = "text-align: center; list-style: none">
-								<li><a href="https://drive.google.com/file/d/1p4ZE0EPJ4WW4HRUtwTXqz-Nfi4sAgW3J/view?usp=sharing" class="button scrolly">View Resume</a></li>
+                                <li><a href="https://drive.google.com/file/d/1bmWW4AfuwwSNVH8rn6IsW-s9S2U7yXw5/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
 
@@ -140,20 +138,18 @@ Join me on this thrilling adventure as we reshape the business world, unlock hid
                                                         <h1 style = "text-align: center">Blogs</h1>
                                                 </div>
                                                 </div>
-                                                       <div class="content">
                                                                 <div class="inner">
-                                                                        <h4>Kubernetes Cluster as Code - Part 1</h4>
-                                                                        <li><a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" class="button scrolly">View Blog</a></li>
-                                                                </div>
-                                                        </div>                                        
+                                                                        <li><a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
+										</li>
+								</div>                                     
                                        </section>
 
                                        <section>
-                                                        <div class="content">
                                                                 <div class="inner">
-                                                                        <h4>Kubernetes Cluster as Code - Part 2</h4>
-                                                                        <li><a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" class="button scrolly">View Blog</a></li>
-                                                                </div>
+									<ul class="blogs">
+										<li>
+											<a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
+										</li>
                                                         </div>
                                                 </section> 
                                         </section>
@@ -232,8 +228,6 @@ Join me on this thrilling adventure as we reshape the business world, unlock hid
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
-					<ul class="menu">
-						<li> Fin :) </li>
 				</div>
 			</footer>
 
