--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							
 				<p style = "text-align: center">My experience in technology includes five years of professional expertise in software engineering and cloud development. 
 				Currently pursuing a Master's in Computer Science at Northeastern University, Boston, I am constantly striving to improve my technical skills and knowledge in the field of Computer Science. <br>
-
+                                <ul style = "text-align: center; list-style: none">
                                 <li><a href="https://drive.google.com/file/d/1bmWW4AfuwwSNVH8rn6IsW-s9S2U7yXw5/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
@@ -136,23 +136,16 @@
                                                 <div class="inner">
                                                         <div>
                                                         <h1 style = "text-align: center">Blogs</h1>
-                                                </div>
+                                                        </div>
                                                 </div>
                                                                 <div class="inner">
-                                                                        <li><a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
-										</li>
+                                                                        <li>
+										<a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
+									        <a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
+											
+									</li>
 								</div>                                     
                                        </section>
-
-                                       <section>
-                                                                <div class="inner">
-									<ul class="blogs">
-										<li>
-											<a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
-										</li>
-                                                        </div>
-                                                </section> 
-                                        </section>
 
 					<!-- four -->
 						<section id="four" class="wrapper style1 fullscreen fade-up">
