--- a/index.html
+++ b/index.html
@@ -135,12 +135,19 @@
                                         <section id="three" class="wrapper style1 fullscreen fade-up">
                                         		<h1 style = "text-align: center">Blogs</h1>
                                                 <div class="inner">
-                                                                        <li><ul>
+							<div>
+								<section>
+									<ul class="blogs">
+									<li>
+										<ul>
 										<a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
 									        <a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
 										</ul>	
 									</li>
-								</div>                                     
+									</ul>
+								</section>
+							</div>
+						</div>                                     
                                        </section>
 
 					<!-- four -->
@@ -151,30 +158,25 @@
 
 
 								<button type = "button" disabled>Go Programming</button>
-								<button type = "button" disabled>Java</button>
-								<button type = "button" disabled>SQL</button>
-								<button type = "button" disabled>Amazon Web Services</button>
 								<button type = "button" disabled>Cloud Computing</button>
 								<button type = "button" disabled>Kubernetes</button>
-								<button type = "button" disabled>Oracle DB/SQLite/MySQL/SQL Server</button>
 								<button type = "button" disabled>Docker</button>
-								<button type = "button" disabled>Terraform</button>
-								
-
 								<button type = "button" disabled>CircleCI</button>
 								<button type = "button" disabled>JFrog</button>
 								<button type = "button" disabled>Helm</button>
-								<button type = "button" disabled>Cucumber</button>
-
-								<button type = "button" disabled>Advanced MS Excel</button>
-								<button type = "button" disabled>Zephyr</button>
-								<button type = "button" disabled>HTML/CSS</button>
-                                                                <button type = "button" disabled>Grafana/Prometheus</button>
+								<button type = "button" disabled>Grafana/Prometheus</button>
                                                                 <button type = "button" disabled>ServiceNow</button>
                                                                 <button type = "button" disabled>ArgoCD</button>
                                                                 <button type = "button" disabled>Kibana</button>
                                                                 <button type = "button" disabled>PagerDuty</button>
-
+								<button type = "button" disabled>Amazon Web Services</button>
+								<button type = "button" disabled>Oracle DB/SQLite/MySQL/SQL Server</button>
+								<button type = "button" disabled>Terraform</button>
+								<button type = "button" disabled>Advanced MS Excel</button>
+								<button type = "button" disabled>Zephyr</button>
+								<button type = "button" disabled>HTML/CSS</button>
+								<button type = "button" disabled>Java</button>
+								<button type = "button" disabled>Cucumber</button>
 							</div>
 
 						</section>
