--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								<div class="inner">
 									<h2>Northeastern University, Boston, MA</h2>
 									<h4>Master of Science in Computer Science</h4>
-									Sep 20223 - Exp. May 2025<br><br>
+									Sep 2023 - Exp. May 2025<br><br>
 									<p>Related Courses: Programming Design Paradigm, Algorithms, Cloud Computing. <br><br> </p>
 								</div>
 							</div>
@@ -124,7 +124,7 @@
 									<h2>Dr. Ambedkar Institute of Technology, Bengaluru, India</h2>
 									<h4>Bachelor of Engineering in Computer Science and Engineering</h4>
 									Aug 2014 - Aug 2018<br><br>
-									<p>Related Courses: Data Structures & Algorithm Design, DBMS, Compiler Design, Cloud Computing, Internet of Things<br><br> CGPA: 9.35(GPA = 4.0)</p>
+									<p>Related Courses: Data Structures & Algorithm Design, DBMS, Compiler Design, Cloud Computing, Internet of Things<br><br> CGPA: 9.35(GPA: 4.0)</p>
 								</div>
 							</div>
 						</section>
@@ -133,16 +133,19 @@
 
                                         <!-- three -->
                                         <section id="three" class="wrapper style1 fullscreen fade-up">
-                                        		<h1 style = "text-align: center">Blogs</h1>
+						<div class = "inner">
+							<div>
+							<h1 style = "text-align: center">Blogs</h1>
+						</div>
+						</div>
+						
                                                 <div class="inner">
 							<div>
 								<section>
 									<ul class="blogs">
 									<li>
-										<ul>
 										<a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
 									        <a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
-										</ul>	
 									</li>
 									</ul>
 								</section>
@@ -217,7 +220,7 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
+			<footer id="footer" class="wrapper style3 fade-up">
 				<div class="inner">
 				</div>
 			</footer>
