--- a/index.html
+++ b/index.html
@@ -132,22 +132,20 @@
 					</section>
 
                                         <!-- three -->
-                                        <section id="three" class="wrapper style1 fullscreen fade-up">
+                                        <section id="three" class="wrapper style1 spotlights">
 						<div class = "inner">
 							<div>
 							<h1 style = "text-align: center">Blogs</h1>
 						</div>
 						</div>
 						
-                                                <div class="inner">
-							<div>
+                                                <div class="content">
+							<div class="inner">
 								<section>
-									<ul class="blogs">
 									<li>
 										<a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
 									        <a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
 									</li>
-									</ul>
 								</section>
 							</div>
 						</div>                                     
