--- a/index.html
+++ b/index.html
@@ -139,16 +139,12 @@
 						</div>
 						</div>
 						
-                                                <div class="content">
-							<div class="inner">
-								<section>
-									<li>
-										<a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
-									        <a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" i class="fa fa-github-alt"><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
-									</li>
-								</section>
-							</div>
-						</div>                                     
+						<div class="inner">
+							<section>
+									<a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" ><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
+									<a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" ><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
+							</section>
+						</div>                                   
                                        </section>
 
 					<!-- four -->
