--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
 						<div class="inner">
 							<h1 style = "text-align: center">Rachana Kallada Jayaraj </h1>
 							
-				<p style = "text-align: center">My experience in technology includes five years of professional expertise in software engineering and cloud development. 
-				Currently pursuing a Master's in Computer Science at Northeastern University, Boston, I am constantly striving to improve my technical skills and knowledge in the field of Computer Science. <br>
+				<p style = "text-align: center">Hello! I'm a dedicated and enthusiastic aspiring software engineer with deep love for the world of technology. 
+					I'm on a mission to harness the power of code to create innovative solutions that make a positive impact on people's lives. I thrive in collaborative environments, valuing teamwork and effective communication. <br>
+					
+					My experience in technology includes five years of professional expertise in software engineering and cloud development. 
+				Currently pursuing a Master's in Computer Science at Northeastern University, Boston, I recognize the importance of continuous learning in this rapidly evolving world. 
+					I'm committed to staying updated with the latest technologies, best practices, and industry trends to ensure that I can make a meaningful impact in the ever-changing landscape of software engineering. <br>
                                 <ul style = "text-align: center; list-style: none">
-                                <li><a href="https://drive.google.com/file/d/18iULiJgRWIqp1h_CGIX2eoTslGRu8BrI/view?usp=sharing" class="button scrolly">View Resume</a></li>
+                                <li><a href="https://drive.google.com/file/d/1H3xqh76_GHn_sEuSnkeu6oD8eQDv1KLn/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
 
@@ -68,6 +72,7 @@
 
 									<p>Engineered user-friendly terraform providers to perform create, delete and scale operations on Kubernetes clusters, resulting in 35% uplift in overall customer satisfaction ratings.</p>
 									<p>Spearheaded open sourcing of HPE repositories by overseeing all stages of OSRB review; boosting downloads by 50%.</p>
+									<p>Designed and developed code for Baremetals As A Service offering of HPE, with multiple enhancements in multiple iterations</p>
 									<p>Improved product stability by 20% through development and testing of HPE Containers as a Service backend code for BareMetal and Virtual Machines.</p>
 									<p>Optimized application uptime and performance by 25% and 20%, respectively, through the implementation of advanced monitoring systems with Grafana, Kibana, ServiceNow, and PagerDuty.</p>
 									<p>Reduced feature time-to-market by 40% via streamlined CI/CD deployment using CircleCI, Helm, and ArgoCD.</p>
