--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									<h4>Bachelor of Engineering in Computer Science and Engineering</h4>
 									Aug 2014 - Aug 2018<br><br>
 									<p>Related Courses: Data Structures & Algorithm Design, DBMS, Compiler Design, Cloud Computing, Internet of Things<br><br> GPA: 4.0 </p>
-								
+								<hr>
 								</div>
 							</div>
 </section>
@@ -150,7 +150,7 @@
                                        </section>
 
 					<!-- four -->
-						<section id="four" class="wrapper style2 fullscreen fade-up">
+						<section id="four" class="wrapper style2 spotlights">
 								<h2 style = "text-align: center"><br />Skills</h2>
 
 							<div class = "inner">
@@ -198,7 +198,8 @@
 							</div>
 						</div>
 						<div class="inner">
-
+							
+							<div class="content">
 							<div>
 								<section>
 									<ul class="contact">
@@ -219,6 +220,7 @@
 										</li>
 									</ul>
 								</section>
+							</div>
 							</div>
 						</div>
 					</section>
