--- a/index.html
+++ b/index.html
@@ -70,13 +70,11 @@
                                                                 GreenLake Cloud Services R&D Department<br><br>
 		  						Jun 2021 - Aug 2023<br><br>
 
-									<p> I received Star Point recognition three times during my tenure, for "Commit and Go" attitude in getting the deliverables developed, deployed and tested within the committed timeline. </p>
-									<p> I worked for over a year in "Containers as a Service on Baremetal" project. I was involved in the requirements analysis, software design of the on-premise and SaaS components, code development in GoLang, unit and functional testing of the code, 
+									<p> I received Star Point recognition three times during my tenure, for "Commit and Go" attitude in getting the deliverables developed, deployed and tested within the committed timeline. I worked for over a year in "Containers as a Service on Baremetal" project. 
+										I was involved in the requirements analysis, software design of the on-premise and SaaS components, code development, unit and functional testing, 
 										and deploying the components in development and production environments. Extensively used GitHub and DevOps tools to maintain multiple iterations of the code as it went through multiple enhancements. I gave sprint demos and was actively a part of
-										design and defect resolution discussions with the dependent teams, leads and architects. </p>
-
-									<p> I also engineered user-friendly terraform providers to perform create, delete and scale operations on Kubernetes clusters, and wrote blogs reagrding the same to enable customers better undertand it.</p>
-									<p> I was a member of the GreenLake Fun Team and had the privilege of emceeing and hosting numerous team events. </p>
+										design and defect resolution discussions with the dependent teams, leads and architects. I also engineered user-friendly terraform providers to perform create, delete and scale operations on Kubernetes clusters, and wrote blogs reagrding the same to enable customers better undertand it.</p>
+									<p> I was a member of the GreenLake Fun Team and had the privilege of emceeing and hosting numerous events at Hewlett Packard Enterprise. </p>
 										
 								</div>
 							</div>
@@ -116,7 +114,7 @@
 									<h3>Northeastern University, Boston, MA</h3>
 									<h4>Master of Science in Computer Science</h4>
 									Sep 2023 - Exp. May 2025<br><br>
-									<p>Related Courses: Programming Design Paradigm, Algorithms, Databas Management Systems. <br><br> </p>
+									<p>Related Courses: Programming Design Paradigm, Algorithms, Database Management Systems, Web Development. <br><br> </p>
 								</div>
 
 								<div class="inner">
